--- a/css/style.css
+++ b/css/style.css
@@ -422,7 +422,7 @@ li{
     background-color: #A2D39B;
 }
 
-#background-dark-red{
+.background-bordeaux{
     background-color: #61082B;
 }
 
@@ -434,7 +434,7 @@ li{
     background-color: #FF1C1C;
 }
 
-#background-light-blue{
+.background-light-blue{
     background-color: #B4D0E7;
 }
 
@@ -448,3 +448,21 @@ li{
 
 /* fine sezione Designit */
 
+/* sezione Porta Dropbox Business nella tua azienda */
+
+#bring-dropbox-text{
+    margin: 100px 100px;
+    font-size: 2.0rem;
+    color: #61082B;
+}
+
+.free-trial-button-2{
+    padding: 10px 30px;
+    border: none;
+    position: absolute;
+    top: 100px;
+    left: 230px;
+    background-color: #FFFFFF;
+}
+
+/* fine sezione Porta Dropbox Business nella tua azienda */
