--- a/css/style.css
+++ b/css/style.css
@@ -117,6 +117,8 @@ body{
 
 /* fine header */
 
+/* main */
+
 /* sezione " Tuttò ciò che ti serve per il lavoro" */
 
 h1{
@@ -478,7 +480,7 @@ li{
 .col-100-questions{
     width: 100%;
     padding: 40px 0px;
-    border-top: 1px solid black;
+    border-top: 1px solid #000000;
     display: flex;
     justify-content: space-between;
 }
@@ -488,7 +490,7 @@ li{
     }
 
 #border-bottom-questions{
-        border-bottom: 1px solid black;
+        border-bottom: 1px solid #000000;
     }
     
 .fa-angle-down{
@@ -496,3 +498,52 @@ li{
     }    
 
 /* fine sezione Domande frequenti */
+
+/* fine main */
+
+/* footer */
+
+.footer-jumbotron{
+    width: 100%;
+    padding-top: 90px;
+    padding-bottom: 90px;
+    margin-top: 150px;
+    color: #FFFFFF;
+    background-color: #000000;
+}
+
+.col-20{
+    width: 20%;
+}
+
+.col-20 > h3{
+    padding-bottom: 30px;
+}
+
+.footer-list{
+    margin: 20px 0px;
+}
+
+.footer-hr{
+    width: 90px;
+    margin: 70px 0px 0px 0px;
+    border-top: 1px solid;
+    border-bottom: 1px solid #FFFFFFA1;
+}
+
+select{
+    width: 100%;
+    color: #FFFFFFA1;
+    background-color: #000000;
+}
+
+.footer-content{
+    display: flex;
+}
+
+.fa-earth-americas{
+    padding-right: 10px;
+    color: #FFFFFFA1;
+}
+
+/* fine footer */
